kubernetes/ingress-rules/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - vote.local
    - result.local
    secretName: vote-tls-secret
  rules:
  - host: vote.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: vote-app-service
            port: 
              number: 80
  - host: result.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: result-service
            port:
              number: 80
